
[*] Fri May 31 2002 - netcat v0.5.0

  o Fixed the udp mode listen, which didn't allow any kind of safe read from
    stdin.
  o Generalized flagset.c to be more a library file.  Fixed some minor bugs in
    the interface.
  o Fixed a bug in ncprint() which didn't respect the EXIT flag if the
    verbosity flag was also specified and not satisfied.
  o Rewritten the core routines and arguments handling to allow a better
    features support.
  o Fixed several mis-behaviours for UDP protocol.
  o Cleaned up the global namespace
  o Now the -x option hexdumps also the source ip address in the introducing
    message.
  o Changed all the netcat defined types names.
  o Restore the tunnel mode functionality.  Now it is even able to tunnel from
    tcp to udp and vice-versa.
  o The udp listening mode now recognizes the `-z' command line switch.
  o Changed telnet command line switch from `-t' to `-T', added the change
    notify to doc/migration.
  o Fixed a design bug in the UDP protocol in listen mode.  The connection
    should be created with the exact interface as identified by the incoming
    packet.  Unfortunately this fix applies only on Linux because it's the
    only OS that supports RFC 2292 extensions to IPv4.
  o Updated the man and info documentation files.


[*] Wed May 15 2002 - netcat v0.4.0

  o Now netcat_socket_accept() recognizes a negative timeout parameter.
  o Splitted core functions like readwrite() to core.c, this allows a more
    modular programming and allows a better features-implementation.
  o Moved some low level code from main.c to core.c
  o Added UDP protocol support, but it is a little buggy still, because I have
    got some logistic problems to solve before fixing the implementation.
  o Fixed various socket leaks.
  o Reimplemented command line switch `-z' for TCP protocol.
  o Handled the listen mode-zero I/O case situation.
  o Port ranges now are recognized even in the form min:max